//
// Copyright (C) 2020 Grakn Labs
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as
// published by the Free Software Foundation, either version 3 of the
// License, or (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.
//

syntax = "proto3";

option java_package = "grakn.protocol";
option java_outer_classname = "AnswerProto";

import "protobuf/concept.proto";

package grakn.protocol;

message Answer {
    oneof answer {
        AnswerGroup answer_group = 1;
        ConceptMap concept_map = 2;
        Number number = 3;
    }
}

message AnswerGroup {
    Concept owner = 1;
    repeated Answer answers = 2;
}

message ConceptMap {
    map<string, Concept> map = 1;
    string pattern = 2;
}

message Number {
    string value = 1;
    // We use a string to contain the full representation of a number
}
