//
// Copyright (C) 2020 Grakn Labs
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as
// published by the Free Software Foundation, either version 3 of the
// License, or (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.
//

syntax = "proto3";

option java_package = "grakn.protocol";
option java_outer_classname = "QueryProto";

import "protobuf/answer.proto";
import "protobuf/options.proto";

package grakn.protocol;

message Query {

    message Req {
        Options options = 1;
        oneof req {
            Graql.Delete.Req delete_req = 100;
            Graql.Define.Req define_req = 101;
            Graql.Undefine.Req undefine_req = 102;
            Graql.Match.Req match_req = 103;
            Graql.Insert.Req insert_req = 104;
        }
    }

    message Res {
        oneof res {
            Graql.Delete.Res delete_res = 100;
            Graql.Define.Res define_res = 101;
            Graql.Undefine.Res undefine_res = 102;
            Graql.Match.Res match_res = 103;
            Graql.Insert.Res insert_res = 104;
        }
    }
}

message Graql {

    message Match {
        message Req {
            string query = 1;
        }
        // @Iterable
        message Res {
            ConceptMap answer = 1;
        }
    }

    message Insert {
        message Req {
            string query = 1;
        }
        // @Iterable
        message Res {
            ConceptMap answer = 1;
        }
    }

    message Delete {
        message Req {
            string query = 1;
        }
        message Res {}
    }

    message Define {
        message Req {
            string query = 1;
        }
        message Res {}
    }

    message Undefine {
        message Req {
            string query = 1;
        }
        message Res {}
    }
}
